@@ -1045,6 +1045,8 @@ END
 STRINGTABLE 
 BEGIN
     IDS_PROC_ENTERURLLABEL  "Url:"
+    IDS_PROC_PATCHTITLE     "Generating Patchfile..."
+    IDS_PROC_SAVEPATCHTO    "Saving patchfile to:"
 END
 
 #endif    // English (U.S.) resources
