@@ -412,6 +412,9 @@
 				RelativePath="..\Icons\menudelete.ico">
 			</File>
 			<File
+				RelativePath="..\Icons\menudiff.ico">
+			</File>
+			<File
 				RelativePath="..\Icons\menuexport.ico">
 			</File>
 			<File
@@ -428,6 +431,9 @@
 			</File>
 			<File
 				RelativePath="..\Icons\menumerge.ico">
+			</File>
+			<File
+				RelativePath="..\Icons\menupatch.ico">
 			</File>
 			<File
 				RelativePath="..\Icons\menurelocate.ico">
